2011-12-17 [mborik] First public alpha version
