@@ -159,7 +159,7 @@ enum TGpioPort { GP_GPIO_0 = 0, GP_GPIO_1, GP_GPIO_BOTH };
 enum TJoyType { JT_NONE = -1, JT_KEYS = 0, JT_AXES, JT_POV, JT_BUTTONS };
 enum TMouseType { MT_NONE = -1, MT_M602 = 0, MT_POLY8 };
 enum TRaomType { RT_CHTF = 0, RT_KUVI = 1 };
-enum TDisplayMode { DM_NORMAL, DM_DOUBLESIZE, DM_TRIPLESIZE, DM_FULLSCREEN };
+enum TDisplayMode { DM_NORMAL, DM_DOUBLESIZE, DM_TRIPLESIZE, DM_QUADRUPLESIZE, DM_FULLSCREEN };
 enum TColorProfile { CP_MONO, CP_STANDARD, CP_COLOR, CP_MULTICOLOR };
 enum TColorPalette { CL_DEFINED, CL_RGB, CL_VIDEO };
 enum THalfPassMode { HP_OFF, HP_75, HP_50, HP_25, HP_0 };
